Update E1. Ejercicio 4. Estructura del sistema operativo.md

--- a/E1. Ejercicio 4. Estructura del sistema operativo.md
+++ b/E1. Ejercicio 4. Estructura del sistema operativo.md
@@ -59,7 +59,8 @@ Muestra también la salida del comando.
 El caché es información que se ha leído del disco y se ha almacenado en la RAM para su uso posterior
 
 | Mem: | 3831 | 1212 | 1222 | 112 | 1396 | 2232 |
-| Swap: | 5116 | 0 | 5116 | | | |
+
+| Swap: | 5116 | 0 | 5116 |
 
 2. **¿Qué es la memoria 'swap' que muestra el comando 'free -m'?**
 - Es una partición en el disco que se puede usar como "ram lenta" para cuando la computadora se queda sin memoria
